# actionable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  generate-code-coverage.sh
.baked-md/: project-readme.md
.github/workflows/: rust.yml
actionable/: Cargo.toml  expand.rs
actionable-macros/: Cargo.toml
actionable-macros/src/: action.rs  actionable.rs  dispatcher.rs  lib.rs
actionable/examples/: api-simulator-async.rs  api-simulator.rs
actionable/src/: action.rs  dispatcher.rs  lib.rs  permissions.rs  statement.rs  tests.rs
coverage/: index.html
coverage/actionable-macros/src/: action.rs.html  actionable.rs.html  dispatcher.rs.html  index.html  lib.rs.html
coverage/actionable/src/: action.rs.html  index.html  lib.rs.html  permissions.rs.html  statement.rs.html  tests.rs.html
main/: crates.js  search-index.js  settings.html  source-files.js
main/actionable/: all.html  derive.Action.html  derive.Actionable.html  derive.AsyncDispatcher.html  derive.Dispatcher.html  enum.ActionNameList.html  enum.Configuration.html  enum.Identifier.html  index.html  sidebar-items.js  struct.ActionName.html  struct.PermissionDenied.html  struct.Permissions.html  struct.ResourceName.html  struct.Statement.html  trait.Action.html  trait.AsyncDispatcher.html  trait.Dispatcher.html
main/actionable/action/: derive.Action.html  struct.ActionName.html  trait.Action.html
main/actionable/dispatcher/: derive.AsyncDispatcher.html  derive.Dispatcher.html  trait.AsyncDispatcher.html  trait.Dispatcher.html
main/actionable/permissions/: struct.Permissions.html
main/actionable/statement/: enum.ActionNameList.html  enum.Configuration.html  enum.Identifier.html  struct.ResourceName.html  struct.Statement.html
main/actionable_macros/: all.html  derive.Action.html  derive.Actionable.html  derive.AsyncDispatcher.html  derive.Dispatcher.html  index.html  sidebar-items.js
main/implementors/actionable/: trait.Action.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
main/implementors/core/convert/: trait.AsRef.js  trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/iter/traits/collect/: trait.IntoIterator.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/error/: trait.Error.js
main/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/src/actionable/: action.rs.html  dispatcher.rs.html  lib.rs.html  permissions.rs.html  statement.rs.html
main/src/actionable_macros/: action.rs.html  actionable.rs.html  dispatcher.rs.html  lib.rs.html
main/src/xtask/: main.rs.html
main/xtask/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Config.html  struct.CoverageConfig.html
xtask/: Cargo.toml
xtask/src/: main.rs
