[package]
name = "actionable-macros"
version = "0.1.0-rc.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Macros for `actionable`"
repository = "https://github.com/khonsulabs/actionable"
license = "MIT OR Apache-2.0"
keywords = ["api", "async", "permissions"]
categories = ["algorithms"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["derive"] }
quote = "1"
proc-macro-error = "1"
darling = "0.13"
ident_case = "1"
thiserror = "1"

[dev-dependencies]
compiletest_rs = "0.7"
actionable = { path = "../actionable" }
