[package]
name = "actionable-macros"
version = "0.2.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Macros for `actionable`"
repository = "https://github.com/khonsulabs/actionable"
license = "MIT OR Apache-2.0"
keywords = ["api", "async", "permissions"]
categories = ["algorithms"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = ["derive"] }
quote = "1.0.15"
proc-macro-error = "1.0.4"
darling = "0.13"
ident_case = "1.0.1"
thiserror = "1.0.30"

[dev-dependencies]
compiletest_rs = "0.7.1"
actionable = { path = "../actionable" }
