[package]
name = "actionable"
version = "0.1.0-dev.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "An enum-based async framework for building permission-driven APIs"
repository = "https://github.com/khonsulabs/actionable"
license = "MIT OR Apache-2.0"
keywords = ["api", "async"]
categories = ["algorithms"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
actionable-macros = { path = "../actionable-macros" }
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1"
