[package]
name = "actionable"
version = "0.2.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "An enum-based async framework for building permission-driven APIs"
repository = "https://github.com/khonsulabs/actionable"
license = "MIT OR Apache-2.0"
keywords = ["api", "async", "permissions"]
categories = ["algorithms"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
actionable-macros = { path = "../actionable-macros", version = "=0.2,0" }
thiserror = "1.0.30"
async-trait = "0.1.52"

[dev-dependencies]
anyhow = "1.0.53"
tokio = { version = "1.15.0", features = ["full"] }
